# invDFT

./: CMakeLists.txt  README.md  authors  install_invDFT.rc
LiH_example/: H_gaussian_paulzim  Li_gaussian_paulzim  SMatrix  initiaVxcGuess_00.2.vtu  initiaVxcGuess_00.pvtu  invDFT_exe  output_invDFT_pp  vxcData_alpha1_680_output_vtuOutput_00.pvtu
demo/LiH_example/: AtomicCoords  DensityMatrix  DensityMatrixSecondary  GaussianSMatrixEvaluated  README.md  allElectronParameterFile.prm  coordinates.inp  initiaVxcGuess_00.0.vtu  initiaVxcGuess_00.1.vtu  initiaVxcGuess_00.3.vtu  inputRhoData_00.pvtu  inverseDFTParams.prm  inverseDFTParams_postProcess.prm
include/: BFGSInverseDFTSolver.h  InverseDFTBase.h  InverseDFTEngine.h  InverseDFTSolverFunction.h  MultiVectorAdjointLinearSolverProblem.h  SlaterFunctionManager.h  TestMultiVectorAdjointProblem.h  TriangulationManagerVxc.h  gaussianFunctionContainer.h  gaussianFunctionManager.h  inverseDFTParameters.h
indentationStandard/: indent-all
installationScripts/: frontier.sh  greatlakes.rc  perlmutter.rc
src/: BFGSInverseDFTSolver.cpp  InverseDFTEngine.cpp  InverseDFTSolverFunction.cpp  MultiVectorAdjointLinearSolverProblem.cpp  TestMultiVectorAdjointProblem.cpp  TriangulationManagerVxc.cpp  inverseDFTParameters.cpp  main.cc
src/gaussian/: gaussianFunctionContainer.cpp  gaussianFunctionManager.cpp
src/slater/: SlaterFunctionManager.cpp
